@@ -1,3 +1,14 @@
+2005-03-21  Jakub Steiner <jimmac@ximian.com>
+
+	* gnome-mime-application-x-vnd.oasis.openoffice.database.png
+	* gnome-mime-application-x-vnd.oasis.openoffice.drawing.png
+	* gnome-mime-application-x-vnd.oasis.openoffice.formula.png
+	* gnome-mime-application-x-vnd.oasis.openoffice.presentation.png
+	* gnome-mime-application-x-vnd.oasis.openoffice.text-master.png
+	* gnome-mime-application-x-vnd.oasis.openoffice.text.png
+	* gnome-mime-application-x-vnd.oasis.openoffice.text-web.png: new
+	  OOo mime types
+
 2005-03-10  Jakub Steiner <jimmac@ximian.com>
 
 	* {16x16,24x24}/filesystems/Makefile.am:
